--- a/StakeHolder-Website/src/styles/Landing.Module.css
+++ b/StakeHolder-Website/src/styles/Landing.Module.css
@@ -1,9 +1,10 @@
-.header {
-  text-align: center;
+.landing {
+  align-items: center;
   margin-top: 2rem;
   color: #d3d3d3;
 }
 
-.header > p {
+.landing > p,
+h1 {
   color: #9c9c9c;
 }
