--- a/StakeHolder-Website/src/styles/Landing.Module.css
+++ b/StakeHolder-Website/src/styles/Landing.Module.css
@@ -1,12 +1,15 @@
 .landing {
   align-items: center;
-  margin-top: 2rem;
-  color: #d3d3d3;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .landing > p,
 h1 {
-  color: #9c9c9c;
+  text-align: center;
+  margin-top: 200px;
 }
-.landing-header {
+
+.stake-btn {
+  text-align: center;
 }
